fix grid alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,7 @@
 .rmc-product-grid {
   flex: 1;
   height: 100%;
-  padding: 2px 40px;
+  padding: 0px 40px;
   overflow-y: auto;
 }
 
